--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,12 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Home" class="prose">
-  <h1>Hello Astro + Daisy UI</h1>
+<BaseLayout title="Home">
+  <main>
+    <div class="px-8 lg:w-5/8 mx-auto mt-24 lg:mt-48">
+      <h1 class="text-6xl font-bold leading-snug">Hi, I'm James - I want to make things simple.</h1>
+      <p class="text-xl leading-relaxed font-normal mt-8 text-base-content/80">Everything seems to be more complicated these days, people need "hacks" to do the most straightforward tasks. Few people know how to cook, fewer people know how to clean, even less know how to grow/hunt/forage.</p>
+      <p class="text-xl leading-relaxed font-normal mt-8 text-base-content/80">This is my collection of thoughts, opinions and acquired knowledge from other sources to help you and <em><b>me</b></em> improve on our complicated lives.</p>
+    </div>
+  </main>
 </BaseLayout>
