--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,13 +3,21 @@ import "../global.css";
 const { title, class: className } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" data-theme="garden">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{title}</title>
   </head>
-  <body class={className}>
-    <slot />
+  <body class={className + " max-w-screen-md mx-auto"}>
+    <nav class="px-4 lg:px-0 py-4 flex justify-between w-full text-lg font-light tracking-wider">
+      <a href="/">jamesbedwell.com</h2>
+        <div class="flex gap-4 justify-end">
+          <a href="/about" class="hover:underline">about</a>
+          <a href="/blog" class="hover:underline">blog</a>
+          <a href="/contact" class="hover:underline">contact</a>
+        </div>
+    </nav>
+      <slot />
   </body>
 </html>
